<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.MainActivity">

    <include
        layout="@layout/layout_head"/>

    <com.taoy3.jiaoyu.ui.view.NoScrollViewPager
        android:id="@+id/vp"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View style="@style/underline_gray" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="@dimen/padding_10">

        <RadioButton
            android:id="@+id/radio0"
            style="@style/radio"
            android:checked="true"
            android:drawableTop="@drawable/tab_msg_bg"
            android:text="@string/btn_msg"
            android:textSize="@dimen/text_12" />

        <RadioButton
            android:id="@+id/radio1"
            style="@style/radio"
            android:drawableTop="@drawable/tab_dynamic_bg"
            android:text="@string/btn_dynamic"
            android:textSize="@dimen/text_12" />

        <RadioButton
            android:id="@+id/radio2"
            style="@style/radio"
            android:drawableTop="@drawable/tab_teach_bg"
            android:text="@string/btn_teach"
            android:textSize="@dimen/text_12" />

        <RadioButton
            android:id="@+id/radio3"
            style="@style/radio"
            android:drawableTop="@drawable/tab_me_bg"
            android:text="@string/btn_me"
            android:textSize="@dimen/text_12" />
    </RadioGroup>

</LinearLayout>