<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/atten_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.taoy3.jiaoyu.ui.widget.InnerGridView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.taoy3.jiaoyu.ui.widget.InnerGridView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/term"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.taoy3.jiaoyu.ui.widget.InnerGridView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        >
    </LinearLayout>
</ScrollView>