<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_head"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/health_detail_rl"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/health_detail_tex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/applogo"
            android:text="健康"
            android:gravity="center"
            android:layout_centerInParent="true"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E2E2E2"
            android:layout_below="@id/health_detail_tex"
            android:layout_marginTop="20dp"/>
    </RelativeLayout>
        -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health_detail_name"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/health_detail_name"
            android:layout_marginLeft="60dp"
            android:text="林真心"
            android:layout_centerVertical="true"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E2E2E2"
            android:layout_below="@id/health_detail_name"
            android:layout_marginTop="20dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health_detail_id"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/health_detail_id"
            android:layout_marginLeft="60dp"
            android:text="@null"
            android:layout_centerVertical="true"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E2E2E2"
            android:layout_below="@id/health_detail_id"
            android:layout_marginTop="20dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health_detail_temperature"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/health_detail_temperature"
            android:layout_marginLeft="60dp"
            android:text="@null"
            android:layout_centerVertical="true"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E2E2E2"
            android:layout_below="@id/health_detail_temperature"
            android:layout_marginTop="20dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health_detail_redeye"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/health_detail_redeye"
            android:layout_marginLeft="60dp"
            android:text="@null"
            android:layout_centerVertical="true"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E2E2E2"
            android:layout_below="@id/health_detail_redeye"
            android:layout_marginTop="20dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health_detail_diarrhea"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/health_detail_diarrhea"
            android:layout_marginLeft="60dp"
            android:text="@null"
            android:layout_centerVertical="true"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E2E2E2"
            android:layout_below="@id/health_detail_diarrhea"
            android:layout_marginTop="20dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health_detail_nail"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/health_detail_nail"
            android:layout_marginLeft="60dp"
            android:text="@null"
            android:layout_centerVertical="true"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E2E2E2"
            android:layout_below="@id/health_detail_nail"
            android:layout_marginTop="20dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health_detail_sont"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/health_detail_sont"
            android:layout_marginLeft="60dp"
            android:text="@null"
            android:layout_centerVertical="true"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E2E2E2"
            android:layout_below="@id/health_detail_sont"
            android:layout_marginTop="20dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health_detail_rash"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/health_detail_rash"
            android:layout_marginLeft="60dp"
            android:text="@null"
            android:layout_centerVertical="true"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E2E2E2"
            android:layout_below="@id/health_detail_rash"
            android:layout_marginTop="20dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health_detail_houyan"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/health_detail_houyan"
            android:layout_marginLeft="60dp"
            android:text="@null"
            android:layout_centerVertical="true"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E2E2E2"
            android:layout_below="@id/health_detail_houyan"
            android:layout_marginTop="20dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health_detail_cough"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/health_detail_cough"
            android:layout_marginLeft="60dp"
            android:text="@null"
            android:layout_centerVertical="true"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E2E2E2"
            android:layout_below="@id/health_detail_cough"
            android:layout_marginTop="20dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health_detail_medicine"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/health_detail_medicine"
            android:layout_marginLeft="60dp"
            android:text="@null"
            android:layout_centerVertical="true"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E2E2E2"
            android:layout_below="@id/health_detail_medicine"
            android:layout_marginTop="20dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health_detail_gohome"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/health_detail_gohome"
            android:layout_marginLeft="60dp"
            android:text="@null"
            android:layout_centerVertical="true"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E2E2E2"
            android:layout_below="@id/health_detail_gohome"
            android:layout_marginTop="20dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health_detail_takecare"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/health_detail_takecare"
            android:layout_marginLeft="90dp"
            android:text="@null"
            android:layout_centerVertical="true"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E2E2E2"
            android:layout_below="@id/health_detail_takecare"
            android:layout_marginTop="20dp"/>
    </RelativeLayout>
</LinearLayout>